--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://yaksh_db_user:2BZYpyxE5y4c2O5l@zerodha.wkigfhv.mongodb.net/zerodha?appName=Zerodha
 TOKEN_KEY=this_is_a_super_secret_key
+NODE_ENV=production
